Fixed word-break in chat page

--- a/AngularApp/src/app/pages/multi-roles/chat/chat.component.css
+++ b/AngularApp/src/app/pages/multi-roles/chat/chat.component.css
@@ -10,6 +10,7 @@
 .message {
     padding: 10px;
     border-radius: 5px;
+    word-break: break-word;
 }
 .left {
     background-color: white;
